// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ordered-list.md with options: {"type":{"text":false}}: ordered-list.md 1`] = `
1. abc123
2. 我a我1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1.  abc123
2.  我a我1

`;

exports[`ordered-list.md with options: undefined: ordered-list.md 1`] = `
1. abc123
2. 我a我1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1.  abc123
2.  我 a 我 1

`;

exports[`unordered-list.md with options: {"type":{"text":false}}: unordered-list.md 1`] = `
* abc123
* 我a我1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-   abc123
-   我a我1

`;

exports[`unordered-list.md with options: undefined: unordered-list.md 1`] = `
* abc123
* 我a我1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-   abc123
-   我 a 我 1

`;
